--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,5 +106,11 @@
     <string name="permission_activity_recognition_explanation">We need motion permission to automatically complete your walking, running, or exercise habits when you meet your goals.</string>
     <string name="permission_location_explanation">We need location permission to send you reminders when you arrive at specific places, like reminding you to hydrate when you reach the gym.</string>
     <string name="permission_notification_explanation">We need notification permission to send you habit reminders and streak countdown alerts to help you stay on track.</string>
+
+    <!-- Navigation -->
+    <string name="explore">Explore</string>
+    <string name="stats">Stats</string>
+    <string name="settings">Settings</string>
+    <string name="habit_detail">Habit Detail</string>
 </resources>
 
