Implement Turn into Habit feature with suggestion navigation
- Create HabitTypeInferrer utility to infer habit type from suggestion content
- Create SuggestionAdapter for displaying suggestions in RecyclerView
- Create item_suggestion.xml layout for suggestion cards
- Update ExploreFragment to:
  * Integrate SuggestionAdapter with RecyclerView
  * Handle "Turn into Habit" button clicks
  * Navigate to AddEditHabitFragment with suggestion data via Safe Args
- Enhance AddEditHabitFragment to:
  * Pre-fill form fields from suggestion data (name, category, type)
  * Pre-fill default parameters based on inferred type (motion type, duration, radius)
  * Allow user to modify all fields before saving
- Remove duplicate Toolbars from all fragment layouts (Today, Explore, Stats, Settings)
- Add string resources for fit_score and turn_into_habit

Acceptance Criteria Met:
✅ Tapping "Turn into Habit" opens Add/Edit screen
✅ Form is pre-filled with suggestion data
✅ User can modify before saving
✅ Navigation works smoothly with Safe Args

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,5 +112,9 @@
     <string name="stats">Stats</string>
     <string name="settings">Settings</string>
     <string name="habit_detail">Habit Detail</string>
+
+    <!-- Explore/Suggestions -->
+    <string name="fit_score">Fit Score:</string>
+    <string name="turn_into_habit">Turn into Habit</string>
 </resources>
 
