Implement comprehensive notification system with WorkManager
- Create HabitNotificationManager (renamed from NotificationManager to avoid conflicts):
  * Central notification manager with singleton pattern
  * Creates notification channels (Streak, Inactivity, Geofence, Reminders)
  * Methods for showing different notification types
  * Duplicate notification prevention using tracking set
  * Notification actions (Mark Done, Snooze) via PendingIntents

- Create NotificationActionReceiver:
  * BroadcastReceiver for handling notification actions
  * Handles "Mark Done" - completes habit and cancels notification
  * Handles "Snooze" - cancels notification and reschedules for 30 minutes

- Create StreakCountdownWorker:
  * WorkManager worker for streak countdown notifications
  * Checks all active habits with streaks every hour
  * Calculates time remaining until end of day
  * Sends notification when < 2 hours remaining
  * Supports snoozed notifications

- Create InactivityDetectionWorker:
  * WorkManager worker for inactivity detection
  * Checks if user has been stationary for 2+ hours
  * Sends nudge notification
  * Scheduled to run every 2 hours
  * Placeholder for Activity Transition API integration

- Create GeofenceNotificationHandler:
  * Handles geofence-triggered notifications
  * Finds location-based habits matching triggered location
  * Shows notification for matching habits

- Create NotificationService:
  * Service to initialize all notification workers
  * Called from MainActivity.onCreate()
  * Schedules all periodic workers

- Update HabitDao:
  * Add getAllHabitsSync() for synchronous access in workers

- Update MainActivity:
  * Initialize NotificationService on app start

- Update AndroidManifest:
  * Add NotificationActionReceiver

- Add string resources:
  * Notification channel names and descriptions
  * Notification titles and messages
  * Action button labels

Acceptance Criteria Met:
✅ Streak countdown notifications work (< 2 hours remainin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,5 +116,25 @@
     <!-- Explore/Suggestions -->
     <string name="fit_score">Fit Score:</string>
     <string name="turn_into_habit">Turn into Habit</string>
+
+    <!-- Notifications -->
+    <string name="notification_channel_streak">Streak Reminders</string>
+    <string name="notification_channel_streak_description">Notifications about expiring streaks</string>
+    <string name="notification_channel_inactivity">Activity Reminders</string>
+    <string name="notification_channel_inactivity_description">Reminders when you\'ve been inactive</string>
+    <string name="notification_channel_geofence">Location Reminders</string>
+    <string name="notification_channel_geofence_description">Reminders when you arrive at specific locations</string>
+    <string name="notification_channel_reminders">Habit Reminders</string>
+    <string name="notification_channel_reminders_description">Scheduled habit reminders</string>
+    
+    <string name="notification_streak_title">Save your streak: %1$s</string>
+    <string name="notification_streak_message">You have %1$d hour(s) left to complete this habit and save your streak!</string>
+    <string name="notification_inactivity_title">Time to move!</string>
+    <string name="notification_inactivity_message">You\'ve been still for 2 hours. Time for a quick activity break?</string>
+    <string name="notification_geofence_title">%1$s reminder</string>
+    <string name="notification_geofence_message">You\'re at the location for %1$s. Don\'t forget to complete it!</string>
+    
+    <string name="mark_done">Mark Done</string>
+    <string name="snooze">Snooze</string>
 </resources>
 
