Redesign Add/Edit Habit screen with minimalistic icon-based UI
- Convert category selection to 2x2 grid with icon buttons
- Update type selection to icon buttons (TIME, MOTION, LOCATION)
- Remove preset reminder time chips, keep only custom time picker
- Improve button alignment and padding throughout
- Add proper spacing and margins for better visual hierarchy
- Update Fragment code to handle new button-based UI
- Remove 'based' suffix from type buttons for cleaner labels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="edit_habit">Edit Habit</string>
     <string name="habit_name">Habit name</string>
     <string name="category">Category</string>
+    <string name="fitness">Fitness</string>
+    <string name="wellness">Wellness</string>
+    <string name="productivity">Productivity</string>
+    <string name="learning">Learning</string>
     <string name="habit_type">Habit type</string>
     <string name="time_based">Time-based</string>
     <string name="motion_based">Motion-based</string>
